# kgmd

./: .gitignore  LICENSE  Makefile  README.md  kgmd-spec.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kgmd/: __init__.py  cli.py  config.py  db.py  embed.py  export.py  extract.py  induce.py  ingest.py  llm.py  mcp_server.py  query.py  resolve.py  schema.py
kgmd/prompts/: extract.txt  induce.txt  resolve.txt
tests/: conftest.py  test_chunk.py  test_db.py  test_export.py  test_extract.py  test_induce.py  test_mcp.py  test_query.py  test_resolve.py
tests/fixtures/: acme_corp.md  brian_anderson.md  digital_transformation.md  partnerships.md  quarterly_review.md  sarah_chen.md  tech_stack.md
